@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

Package Controller <<Folder>>{
    class PostponeAgendaEntryController {
        + getEntriesFromAgendaStartingFrom(currentDate, status)
        + postponeEntryToDate(selectedEntry, selectedDateHour, futureEntries)
    }
}
Package UI <<Folder>>{
    class PostponeAgendaEntryUI {
         +run()
    }
}

Package RepositoriesPkg <<Folder>>{

    class Repositories{
         - instance : Repositories
          - Repository : SkillRepository
         - agendaRepository : AgendaRepository
          - employeeRepository : EmployeeRepository

          + getInstance() : Repositories
          + getAgendaRepository()
          + getEmployeeRepository()
    }

    class EmployeeRepository {

        + getEmployees()
        + validateEmployee(newEmployee)
        + addEmployees(newEmployee)
    }


    class AgendaRepository{
        + getEntriesFromAgendaStartingFrom(currentDate, status="Planned")
    }

    class AuthenticationRepository{
         + getEmployeeFromSession()
    }
}


Package Domain <<Folder>>{
class Entry {
    - String name
    - String description
    - String urgencyDegree
    - int duration
    - GreenSpace greenSpace
    - String status
    - LocalDate entryDate
    - int hour
    + Entry(String name, String description, String urgencyDegree,\n int duration, GreenSpace greenSpace, LocalDate date, int hour)

}

class Employee {
    -name:String
    -birthdate:Date
    -admissionDate:Date
    -address
    -mobileContact:String
    -emailContact:String
    -IDdocType:String
    -IDnumber:String
    -taxNumber:String
    -job:Job

    +Employee (String nome,LocalDate dateOfBirth,\nLocalDate admissionDate, String morada, int telemovel,\nString email, String idDocType, int docTypeNumber,\nint taxPayerIdNumber, String role, Job job)
}
}

PostponeAgendaEntryUI "1" ..> "1" PostponeAgendaEntryController




Repositories -> Repositories : instance
Repositories "1" --> "1" AgendaRepository
Repositories "1" --> "1" AuthenticationRepository
Repositories "1" -> "1" EmployeeRepository

EmployeeRepository "1" -> "*" Employee
AgendaRepository "1" --> "*" Entry


PostponeAgendaEntryController ..> AgendaRepository
PostponeAgendaEntryController "1" ..> "1" Repositories : repositories
PostponeAgendaEntryController "1" --> "1" AuthenticationRepository : getCurrentUserSession

PostponeAgendaEntryController -> Employee


AuthenticationRepository --> Employee

Employee -> Entry

@enduml